# tui-typing-tutor

./: .codebook.toml  .gitignore  .markdownlint.yaml  .prettierrc.yaml  CHANGELOG.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  ttt.sh
docs/: index.md
docs/content/: ai_policy.md  development.md  documentation_policy.md  exception_handling.md
docs/css/: extra.css
setup/: githook_setup.sh
setup/dictionaries/: whitelist
setup/githooks/: post-checkout  pre-commit  pre-push
setup/preferences/: .gitignore
setup/preferences/examples/: README.md  black  code.code-workspace  pylintrc  settings.json  shell.nix
setup/scripts/: spellcheck.py  update_pylint_dictionary.py  version_control.sh
src/data/: default.tcss  epictectus_1.txt  sample.txt
src/tui_typing_tutor/: __init__.py  tui_typing_tutor.py
src/tui_typing_tutor/.github/: CODEOWNERS
tests/unit/: test_tui_typing_tutor.py
